thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • thinwedge-logs.log
    • thinwedge-connectivity-diagnostics.txt

› 1. Yes  Share the current ThinWedge session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
