thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • thinwedge-logs.log
    • thinwedge-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Share the current ThinWedge session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
